Fixed font size for Contact on mobile

--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ body {
     }
 
     .section-contact p {
-        font-size: 200%;
+        font-size: 150%;
     }
 }
 
